Measures as table + javadoc.